--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-just-parallax": "^3.1.16",
     "react-router-dom": "^6.22.3",
+    "react-vertical-timeline-component": "^3.6.0",
     "scroll-lock": "^2.1.5"
   },
   "devDependencies": {
